welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:9: error: Unmatched closing brace '}' ignored here
 }
 ^